--- a/Online Spinner_files/main.css
+++ b/Online Spinner_files/main.css
@@ -17,12 +17,10 @@ body
 }
 
 .mainsection{
-	background-color: #006972;	
+	background-image: url(./assets/images/mbr-1920x1371.jpg);	
 }
 
 .infobox2{
-	background-color: #fff;
-	border:1px solid black;
 	width: 800px;
 	margin-left: auto; margin-right: auto;
 }
