--- a/Online Spinner_files/main.css
+++ b/Online Spinner_files/main.css
@@ -13,7 +13,7 @@ Verison History:
 body
 {
     font-family: arial;
-	background-color: dodgerblue;
+	background-image: url(./assets/images/mbr-1920x1371.jpg);
 }
 
 .mainsection{
