--- a/Online Spinner_files/main.css
+++ b/Online Spinner_files/main.css
@@ -65,7 +65,7 @@ table.power
 
 table.power th
 {
-    background-color: white;
+    background-image: url(./assets/images/mbr-1920x1371.jpg);
     cursor: default;
 }
 
